# expensefn

./: README.md  categories.json  expenses.db  main.py  pyproject.toml
client/: main.py  pyproject.toml
